Add dark mode support for all colored axis text
- Created 32 semantic CSS classes for axis value labels
- Each class has light and dark mode color variants
- Dark mode colors are lighter/brighter for better contrast
- Replaced all inline styles with CSS classes
- Maintains visual consistency across themes
- All colors meet WCAG contrast requirements

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/market.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#00897b;">FREE MARKET</b></p>
+            <p class="value"><b class="text-market">FREE MARKET</b></p>
             <p class="blurb-text">
                 Belief in market mechanisms, private enterprise, low regulation, and economic freedom. Skeptical of redistribution and government economic intervention.
             </p>
@@ -48,7 +48,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/equality.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#f44336;">ECONOMIC EQUALITY</b></p>
+            <p class="value"><b class="text-equality">ECONOMIC EQUALITY</b></p>
             <p class="blurb-text">
                 Belief in wealth redistribution, social programs, progressive taxation, and reducing economic inequality. Support for public services and worker protections.
             </p>
@@ -59,7 +59,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/authority.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#3f51b5;">STATE AUTHORITY</b></p>
+            <p class="value"><b class="text-authority">STATE AUTHORITY</b></p>
             <p class="blurb-text">
                 Acceptance of state power over individuals for security, order, or social goals. May support surveillance, censorship, or restrictions on personal freedoms.
             </p>
@@ -70,7 +70,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/liberty.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#e6c700;">CIVIL LIBERTY</b></p>
+            <p class="value"><b class="text-liberty">CIVIL LIBERTY</b></p>
             <p class="blurb-text">
                 Strong belief in individual rights, privacy, freedom of speech and expression. Skeptical of government surveillance and restrictions on personal choices.
             </p>
@@ -81,7 +81,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/tradition.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#795548;">TRADITIONAL</b></p>
+            <p class="value"><b class="text-tradition">TRADITIONAL</b></p>
             <p class="blurb-text">
                 Value for established customs, religious institutions, traditional family structures, and cultural continuity. Skeptical of rapid social change.
             </p>
@@ -92,7 +92,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/progress.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#9c27b0;">PROGRESSIVE</b></p>
+            <p class="value"><b class="text-progress">PROGRESSIVE</b></p>
             <p class="blurb-text">
                 Embrace of social change, secular values, gender equality, LGBTQ+ rights, and evolving social norms. Prioritize reason and science over tradition.
             </p>
@@ -103,7 +103,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/nation.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#ff9800;">NATIONALIST</b></p>
+            <p class="value"><b class="text-nation">NATIONALIST</b></p>
             <p class="blurb-text">
                 Priority for national identity, sovereignty, and borders. Skeptical of immigration, international organizations, and globalization. "Citizens first" mentality.
             </p>
@@ -114,7 +114,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/globe.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#03a9f4;">COSMOPOLITAN</b></p>
+            <p class="value"><b class="text-globe">COSMOPOLITAN</b></p>
             <p class="blurb-text">
                 Embrace of global citizenship, open borders, international cooperation, and multiculturalism. View humanity as one community beyond national boundaries.
             </p>
@@ -125,7 +125,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/elite.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#607d8b;">PLURALIST</b></p>
+            <p class="value"><b class="text-elite">PLURALIST</b></p>
             <p class="blurb-text">
                 Trust in institutions, experts, and representative democracy. Value compromise, checks and balances, and incremental change through established channels.
             </p>
@@ -136,7 +136,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/populist.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#e91e63;">POPULIST</b></p>
+            <p class="value"><b class="text-populist">POPULIST</b></p>
             <p class="blurb-text">
                 Belief that "ordinary people" are opposed by a "corrupt elite." Distrust of mainstream institutions, media, and experts. Favor direct democracy and outsider politics.
             </p>
@@ -147,7 +147,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/dove.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#8bc34a;">NON-INTERVENTIONIST</b></p>
+            <p class="value"><b class="text-dove">NON-INTERVENTIONIST</b></p>
             <p class="blurb-text">
                 Oppose military intervention abroad. Favor diplomacy, reduced defense spending, and focusing on domestic issues. Skeptical of military alliances and foreign entanglements.
             </p>
@@ -158,7 +158,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/hawk.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#b71c1c;">INTERVENTIONIST</b></p>
+            <p class="value"><b class="text-hawk">INTERVENTIONIST</b></p>
             <p class="blurb-text">
                 Support for active foreign policy, military strength, and willingness to intervene abroad for security or humanitarian goals. Value alliances and global influence.
             </p>
@@ -169,7 +169,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/anthropo.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#9e9e9e;">HUMAN-CENTERED</b></p>
+            <p class="value"><b class="text-anthropo">HUMAN-CENTERED</b></p>
             <p class="blurb-text">
                 Human interests take priority over environmental concerns. Skeptical of climate action that impedes economic growth. Trust technology to solve environmental problems.
             </p>
@@ -180,7 +180,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/eco.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#4caf50;">NATURE-CENTERED</b></p>
+            <p class="value"><b class="text-eco">NATURE-CENTERED</b></p>
             <p class="blurb-text">
                 Nature has intrinsic value. Strong support for environmental protection, climate action, and sustainability—even at economic cost. May support animal rights.
             </p>
@@ -191,7 +191,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/central.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#673ab7;">CONCENTRATED</b></p>
+            <p class="value"><b class="text-central">CONCENTRATED</b></p>
             <p class="blurb-text">
                 Preference for centralized, efficient governance. Strong national authority, unified decision-making, and clear hierarchies. Skeptical of federalism and local autonomy.
             </p>
@@ -202,7 +202,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/decentral.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#00bcd4;">DISTRIBUTED</b></p>
+            <p class="value"><b class="text-decentral">DISTRIBUTED</b></p>
             <p class="blurb-text">
                 Preference for decentralized power, federalism, local autonomy, and direct democracy. Support for checks and balances and participatory decision-making.
             </p>
@@ -213,7 +213,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/gradualist.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#5d4037;">GRADUALIST</b></p>
+            <p class="value"><b class="text-gradualist">GRADUALIST</b></p>
             <p class="blurb-text">
                 Preference for slow, incremental reform within existing systems. Trust in institutions' ability to evolve. Skeptical of rapid or revolutionary change.
             </p>
@@ -224,7 +224,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/revolutionary.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#ff5722;">REVOLUTIONARY</b></p>
+            <p class="value"><b class="text-revolutionary">REVOLUTIONARY</b></p>
             <p class="blurb-text">
                 Belief that fundamental change requires breaking with existing systems. Willingness to pursue rapid, sweeping transformation of society.
             </p>
@@ -235,7 +235,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/constrained.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#455a64;">FIXED HUMAN NATURE</b></p>
+            <p class="value"><b class="text-constrained">FIXED HUMAN NATURE</b></p>
             <p class="blurb-text">
                 View of human nature as fixed and flawed. Society must work within limits of human selfishness. Skeptical of utopian social engineering.
             </p>
@@ -246,7 +246,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/unconstrained.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#e69500;">IMPROVABLE HUMAN NATURE</b></p>
+            <p class="value"><b class="text-unconstrained">IMPROVABLE HUMAN NATURE</b></p>
             <p class="blurb-text">
                 View of human nature as malleable and perfectible. With proper institutions, education, and environment, most social problems can be solved.
             </p>
@@ -257,7 +257,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/pragmatic.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#78909c;">RESULTS-FOCUSED</b></p>
+            <p class="value"><b class="text-pragmatic">RESULTS-FOCUSED</b></p>
             <p class="blurb-text">
                 Focus on practical results over ideological purity. Willingness to compromise and adapt. "What works" matters more than theoretical consistency.
             </p>
@@ -268,7 +268,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/principled.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#7b1fa2;">VALUES-FOCUSED</b></p>
+            <p class="value"><b class="text-principled">VALUES-FOCUSED</b></p>
             <p class="blurb-text">
                 Commitment to moral principles regardless of consequences. Means matter as much as ends. Certain actions are inherently right or wrong.
             </p>
@@ -279,7 +279,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/private.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#1565c0;">PRIVATE</b></p>
+            <p class="value"><b class="text-private">PRIVATE</b></p>
             <p class="blurb-text">
                 Strong belief in private property rights. Individual ownership creates responsibility, efficiency, and freedom. Skeptical of collective ownership models.
             </p>
@@ -290,7 +290,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/commons.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#c62828;">COMMONS</b></p>
+            <p class="value"><b class="text-commons">COMMONS</b></p>
             <p class="blurb-text">
                 Belief that key resources should be commonly owned or managed. Support for cooperatives, public ownership, and shared stewardship of resources.
             </p>
@@ -301,7 +301,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/religious.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#6d4c41;">RELIGIOUS</b></p>
+            <p class="value"><b class="text-religious">RELIGIOUS</b></p>
             <p class="blurb-text">
                 Religion should inform public life and policy. Faith communities provide moral guidance essential for society. Skeptical of pure secularism.
             </p>
@@ -312,7 +312,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/secular.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#26a69a;">SECULAR</b></p>
+            <p class="value"><b class="text-secular">SECULAR</b></p>
             <p class="blurb-text">
                 Strict separation of religion and state. Public policy should be based on reason and evidence, not religious doctrine. Morality doesn't require faith.
             </p>
@@ -323,7 +323,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/techskeptic.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#8d6e63;">TECH SKEPTIC</b></p>
+            <p class="value"><b class="text-techskeptic">TECH SKEPTIC</b></p>
             <p class="blurb-text">
                 Cautious about technological solutions. Technology often creates new problems. Value traditional ways of living. Skeptical of tech-driven progress.
             </p>
@@ -334,7 +334,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/technophile.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#00acc1;">TECH ENTHUSIAST</b></p>
+            <p class="value"><b class="text-technophile">TECH ENTHUSIAST</b></p>
             <p class="blurb-text">
                 Optimistic about technology's potential to solve problems. Support for innovation, automation, and technological advancement as keys to progress.
             </p>
@@ -345,7 +345,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/targeted.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#546e7a;">TARGETED</b></p>
+            <p class="value"><b class="text-targeted">TARGETED</b></p>
             <p class="blurb-text">
                 Social programs should be means-tested and directed at those in need. Personal responsibility first; assistance as a safety net, not an entitlement.
             </p>
@@ -356,7 +356,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/universal.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#d81b60;">UNIVERSAL</b></p>
+            <p class="value"><b class="text-universal">UNIVERSAL</b></p>
             <p class="blurb-text">
                 Social programs should be universal rights available to all. Universal programs build solidarity and avoid stigma. Support for comprehensive welfare state.
             </p>
@@ -367,7 +367,7 @@
     <div class="spacer">
         <div class="explanation_blurb_left">
             <img src="icons/assimilationist.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#4e342e;">SHARED CULTURE</b></p>
+            <p class="value"><b class="text-assimilationist">SHARED CULTURE</b></p>
             <p class="blurb-text">
                 Immigrants and minorities should adopt the majority culture. National cohesion requires shared identity. Skeptical of multiculturalism.
             </p>
@@ -378,7 +378,7 @@
         </div>
         <div class="explanation_blurb_right">
             <img src="icons/pluralist.svg" class="blurb-icon" alt="">
-            <p class="value"><b style="color:#7cb342;">CULTURAL DIVERSITY</b></p>
+            <p class="value"><b class="text-pluralist">CULTURAL DIVERSITY</b></p>
             <p class="blurb-text">
                 Cultural diversity should be celebrated and preserved. Multiple identities can coexist. Support for minority rights and cultural accommodation.
             </p>
